--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html,
 body {
 	margin: 0;
@@ -589,7 +588,7 @@ footer p {
 	color: #FFFFFF;
 }
 
-.brightless {
+/* .brightless {
 	margin-top:10px;
 	display: flex;
 	flex-direction: row;
@@ -599,12 +598,13 @@ footer p {
 	margin-top:10px;
 	display: flex;
 	flex-direction: row;
-}
+} */
 
 .user_tools {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	margin-top: 10px;
 }
 
 
